--- a/.github/workflows/auto_publish_on_tag.yml
+++ b/.github/workflows/auto_publish_on_tag.yml
@@ -1,17 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Publish
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    tags:
+      - "v*"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,11 +22,25 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Build preview pdf
+        uses: xu-cheng/latex-action@v2
+        with:
+          root_file: resume.tex
+          args: -pdf -jobname=PDF-Preview
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Upload preview
+        uses: actions/upload-artifact@v1
+        with:
+          name: resume-pdf
+          path: PDF-Preview.pdf
+
+      - name: Publish PDF
+        id: publish_pdf
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: PDF-Preview.pdf
+          draft: false
+          prerelease: false
