--- a/.github/workflows/build_preview.yml
+++ b/.github/workflows/build_preview.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: PDF-Preview
+name: Build
 
 # Controls when the workflow will run
 on:
@@ -36,3 +36,4 @@ jobs:
         with:
           name: resume-pdf
           path: PDF-Preview.pdf
+          if-no-files-found: error
