--- a/.github/workflows/auto_publish_on_tag.yml
+++ b/.github/workflows/auto_publish_on_tag.yml
@@ -26,14 +26,14 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: resume.tex
-          args: -pdf -jobname=PDF-Preview
+          args: -pdf -jobname=Build
 
       # Runs a set of commands using the runners shell
       - name: Upload preview
         uses: actions/upload-artifact@v1
         with:
           name: resume-pdf
-          path: PDF-Preview.pdf
+          path: Build.pdf
 
       - name: Publish PDF
         id: publish_pdf
@@ -41,6 +41,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: PDF-Preview.pdf
+          files: Build.pdf
           draft: false
           prerelease: false
